compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__integration_test10.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 301
expression: "pub type Null { Null }\npub fn x() { Null }"
snapshot_kind: text
---
----- SOURCE CODE
pub type Null { Null }
pub fn x() { Null }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/0]).
-export_type([null/0]).

-type null() :: null.

-file("project/test/my/mod.gleam", 2).
-spec x() -> null().
x() ->
    null.
