compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__integration_test13.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 334
expression: "pub type State{ Start(Int) End(Int) }\n            pub fn build(constructor : fn(Int) -> a) -> a { constructor(1) }\n            pub fn main() { build(End) }"
snapshot_kind: text
---
----- SOURCE CODE
pub type State{ Start(Int) End(Int) }
            pub fn build(constructor : fn(Int) -> a) -> a { constructor(1) }
            pub fn main() { build(End) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([build/1, main/0]).
-export_type([state/0]).

-type state() :: {start, integer()} | {'end', integer()}.

-file("project/test/my/mod.gleam", 2).
-spec build(fun((integer()) -> I)) -> I.
build(Constructor) ->
    Constructor(1).

-file("project/test/my/mod.gleam", 3).
-spec main() -> state().
main() ->
    build(fun(Field@0) -> {'end', Field@0} end).
