compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__integration_test16.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 343
expression: "fn go(x xx, y yy) { xx }\npub fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }"
snapshot_kind: text
---
----- SOURCE CODE
fn go(x xx, y yy) { xx }
pub fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/0]).

-file("project/test/my/mod.gleam", 1).
-spec go(I, any()) -> I.
go(Xx, Yy) ->
    Xx.

-file("project/test/my/mod.gleam", 2).
-spec x() -> integer().
x() ->
    go(1, 2),
    go(4, 3).
